--- a/css/root.css
+++ b/css/root.css
@@ -234,6 +234,7 @@ body {
         line-height: var(--line-height);
         margin-top: 0;
         margin-bottom: 0.50em;
+        text-wrap: pretty;
     }
 }
 
@@ -256,12 +257,6 @@ body {
     position: absolute;
     top: -4rem;
     right: 0;
-}
-
-/*====[ Top Navigation (Discussion, Edit, Watch, ..etc) ]====*/
-#mw-head {
-    grid-area: TopNavigation;
-    align-self: end;
 }
 
 /* 
@@ -302,7 +297,7 @@ body {
     display: grid;
     grid-template-columns: [l] 1fr 0fr [r];
     grid-template-rows: [t] auto auto [b];
-    text-shadow: 0 0 4px #000;
+    text-shadow: 0 0 3px #222, 0 0 3px #222;
 }
 
 /*====[ wiki.gg Footer ]====*/
@@ -515,7 +510,6 @@ hr {
     padding: 0;
     background: var(--theme-navbar-tab-selected-background);
     box-shadow: var(--theme-box-shadow);
-    backdrop-filter: var(--theme-blur-effect);
 
     .vector-menu-heading {
         margin: 0;
@@ -536,6 +530,7 @@ hr {
         background: none;
         padding: 0;
         margin: 0;
+        backdrop-filter: var(--theme-blur-effect);
 
         ul {
             padding: 0.5rem;
