--- a/css/toc.css
+++ b/css/toc.css
@@ -4,8 +4,9 @@
 ========================================================================================*/
 .toc {
     border-radius: 4px;
-    border: 1px solid #069EA6;
-    background: var(--theme-box-background);
+    border-width: 0 0 0 0.5rem;
+    border-color: var(--theme-border-color);
+    background-color: #8882;
     margin: 1em auto 1em 0;
     padding: 0;
     font-size: 1em;
@@ -51,6 +52,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
+        outline: none !important;
 
         &::after {
             /*Remove the "hide" text*/
@@ -58,7 +60,7 @@
         }
 
         &::before {
-            /*Chevron icon to replaace the "hide" text*/
+            /*Chevron icon to replace the "hide" text*/
             content: "";
             display: inline-block;
             background: none;
@@ -80,10 +82,6 @@
 
     a {
         color: var(--theme-text-color);
-    }
-
-    .toctogglelabel:hover::before {
-        border-color: var(--theme-hover-color) transparent;
     }
 
     .toctogglecheckbox:checked+.toctitle .toctogglelabel::before {
