--- a/css/wiki-templates.css
+++ b/css/wiki-templates.css
@@ -10,19 +10,25 @@
 .infoicon {
     white-space: nowrap;
 
-    img {
-        margin-bottom: 2px;
-        margin-right: 4px;
-        aspect-ratio: 1/1;
-        object-fit: contain;
-        width: auto;
-        height: auto;
-        max-height: 1.5rem;
-        max-width: 1.5rem;
-        /* make icons pop a bit more?*/
-        filter: drop-shadow(0px 0px 6px #0008);
+    a {
+        text-wrap: nowrap;
+
+        img {
+            margin-bottom: 2px;
+            margin-right: 4px;
+            aspect-ratio: 1/1;
+            object-fit: contain;
+            width: auto;
+            height: auto;
+            max-height: 1.5rem;
+            max-width: 1.5rem;
+            /* make icons pop a bit more?*/
+            filter: drop-shadow(0px 0px 6px #0008);
+        }
     }
 }
+
+
 
 [class^="rarity-"] {
     border-image-source: var(--background-rarity);
