--- a/css/root.css
+++ b/css/root.css
@@ -76,6 +76,7 @@
     --theme-text-color-em: oklch(90% 0 0);
     --theme-text-selection-color: oklch(90% 0.14 var(--theme-accent-color-hue));
     --theme-text-selection-background-color: oklch(60% 0.07 var(--theme-accent-color-hue) / 30%);
+    --theme-text-code-color: oklch(85% 0.175 176.82);
     --theme-heading-color: oklch(90% 0.03 195);
     --theme-content-background-color: oklch(15% 0.0537 var(--theme-accent-color-hue) / 85%);
     --theme-triangle-header-background-color: var(--theme-accent-color-30);
@@ -590,37 +591,16 @@ hr {
     }
 }
 
-pre {
-    margin: 0;
-    background-color: var(--theme-accent-color-20);
-    color: #ffcc00;
-    border: 0;
-    border-radius: 0.5rem;
-
-    &.lua.source-lua {
-        font-size: 14px !important;
-    }
-
-    .mw-content-ltr & {
-        .mw-highlight-lines & {
-            padding: 1em;
-            box-shadow: none;
-        }
-    }
-}
-
-.mw-content-ltr {
-    .mw-editsection {
-        font-size: 0.75rem;
-        vertical-align: super;
-        margin-left: 0;
-        animation-name: fadeIn;
-        animation-timing-function: linear;
-        animation-duration: 200ms;
-        animation-delay: 100ms;
-        animation-iteration-count: 1;
-        animation-fill-mode: forwards;
-    }
+.mw-editsection {
+    font-size: 0.75rem;
+    vertical-align: super;
+    margin-left: 0;
+    animation-name: fadeIn;
+    animation-timing-function: linear;
+    animation-duration: 200ms;
+    animation-delay: 100ms;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 #contentSub,
@@ -809,10 +789,25 @@ samp,
 }
 
 code {
-    background-color: #1a1a1a;
-    color: #ffcc00;
+    background-color: var(--theme-accent-color-20);
+    color: var(--theme-text-code-color);
     border: 0;
     border-radius: 0.25rem;
+}
+
+pre {
+    background-color: var(--theme-accent-color-20);
+    color: var(--theme-text-code-color);
+    border: 0;
+    border-radius: 0.5rem;
+
+    &.lua.source-lua {
+        font-size: 14px !important;
+    }
+
+    .mw-content-ltr .mw-highlight & {
+        box-shadow: none;
+    }
 }
 
 /* Recent changes info box */
