--- a/css/media.css
+++ b/css/media.css
@@ -21,7 +21,7 @@
     #mw-panel {
         display: flex;
         justify-content: space-evenly;
-        background-color: var(--theme-accent-color-20);
+        background-color: var(--theme-accent-color-200);
         box-shadow: var(--theme-box-shadow);
         /* Margin for search bar */
         margin-bottom: 4rem;
@@ -40,7 +40,7 @@
             border: 0;
             border-radius: 0;
             background: none;
-            color: var(--theme-accent-color-25);
+            color: var(--theme-accent-color-200);
         }
 
         .body {
