--- a/css/navigation.css
+++ b/css/navigation.css
@@ -77,7 +77,9 @@
         margin-right: 0.375rem;
         margin-bottom: 0.375rem;
         line-height: initial;
-        transition: 150ms ease-in-out;
+        transition-property: transform, background-color, border-radius;
+        transition-duration:  150ms;
+        transition-timing-function:  ease-in-out;
         border-radius: var(--theme-border-radius-inner);
         box-shadow: var(--theme-button-box-shadow);
 
